# Password-Management-V2

./: README.md  android_run_dev.sh  angular.json  package-lock.json  package.json
.github/workflows/: build_apk.yml
public/i18n/: en.json
scripts/: generate-sprite-types.js  generate-sprite.js
src/: index.html  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: google_sheet_commands.rs
src-tauri/src/helpers/: aes_helper.rs  mod.rs
src-tauri/src/models/: mod.rs  password.rs
src-tauri/src/services/: google_sheet_service.rs
src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
src/app/core/: routes.enum.ts
src/app/core/enums/: file-names.ts  folder-names.ts  routes.enum.ts  setting-keys.ts
src/app/pages/add-account/: add-account.html  add-account.ts
src/app/pages/add-passcode/: add-passcode.html  add-passcode.ts
src/app/pages/config/: config.html  config.ts
src/app/pages/edit-account/: edit-account.html  edit-account.ts
src/app/pages/home/: home.html  home.scss  home.ts
src/app/pages/login/: login.html  login.ts
src/app/pages/settings/: settings.html  settings.ts
src/app/shared/directives/: click-outside.directive.ts
src/app/shared/helpers/: app-folder.ts  file-helper.ts  spread-sheet-helper.ts  store-helper.ts
src/app/shared/models/: account-model.ts
src/app/shared/services/: config-service.ts  dialog-service.ts  language-service.ts  tauri-command-service.ts
src/app/shared/stores/: accounts.store.ts  question-cancel-dialog.store.ts  (+2 more)
(+29 files in other folders)
