[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"

tokio = { version = "1.48.0", features = ["full"] }
tauri-plugin-fs = "2"
regex = "1"
roxmltree = "0.21.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
urlencoding = "2"
anyhow = "1"
chrono = "0.4"
tauri-plugin-store = "2"
aes-gcm = "0.10"        # AES-GCM
aes = "0.8"             # AES
argon2 = "0.4"          # key derivation
rand = "0.8"            # tạo nonce
base64 = "0.21"         # encode/decode dữ liệu
